# splnft

./: Anchor.toml  README.md
programs/snft/: Cargo.toml
programs/snft/src/: lib.rs
programs/snft/src/burn/: burn.rs  mod.rs
programs/snft/src/collection/: collection.rs  mod.rs
tests/: snft.ts
