[package]
name = "snft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "snft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = {version = "0.28.0",features = ["metadata"]}
base64 = "0.13.1"
borsh = "0.10.3"
bs58 = "0.4.0"
chrono = "0.4.31"
console = "0.15.7"
dirs = "5.0.1"
env_logger = "0.9.3"
futures = "0.3.29"
glob = "0.3.1"
indexmap = { version = "1.9.3", features = ["serde"] }
indicatif = { version = "0.16.2", features = ["rayon"] }
jib = "0.7.0"
lazy_static = "1.4.0"
log = "0.4.20"
mpl-token-metadata = { version = "3.2.3", features = ["serde"] }
num_cpus = "1.16.0"
once_cell = "1.19.0"
phf = { version = "0.10", features = ["macros"] }
ratelimit = "0.4.4"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json"] }
retry = "1.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.8.26"
shellexpand = "2.1.2"
solana-client = "~1.16.24"
solana-account-decoder = "~1.16.24"
solana-logger = "~1.16.24"
solana-program = "~1.16.24"
solana-sdk = "~1.16.24"
spl-associated-token-account = "1.1.3"
spl-token = "3.5.0"
structopt = "0.3.26"
thiserror = "1.0.51"
tokio = "1.35.1"